# agent-sandbox

./: Makefile  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
tests/: test_cli.py
