[project]
name = "agent-sandbox"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[project.scripts]
sbx = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["main.py"]

[dependency-groups]
dev = [
    "ruff>=0.15.15",
    "ty>=0.0.41",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
# Target Python version is auto-detected from requires-python above.
select = [
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "I",  # isort (import sorting)
    "UP", # pyupgrade
    "B",  # flake8-bugbear
]
